# mal-rustc

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  run-mal-tests
mal_rustc_core/: Cargo.toml
mal_rustc_core/src/: lib.rs  parser.rs  types.rs
mal_rustc_core/src/comp/: env.rs  mod.rs
mal_rustc_core/src/types/: mod.rs  runtime.rs
malrc0/: Cargo.toml
malrc0/src/: main.rs
step0_repl/: Cargo.toml
step0_repl/src/: main.rs
step1_read_print/: Cargo.toml
step1_read_print/src/: main.rs
step2_eval/: Cargo.toml
step2_eval/src/: main.rs
step3_env/: Cargo.toml
step3_env/src/: main.rs
step4_if_fn_do/: Cargo.toml
step4_if_fn_do/src/: main.rs
