[package]
name = "step4_if_fn_do"
version = "0.1.0"
authors = ["emturner <em.turner@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
nom = "5.0"
proc-macro2 = "1.0"
mal_rustc_core = { path = "../mal_rustc_core" }
